2008-08-10  Jonathan Matthew  <jonathan@d14n.org>

	Bug 547134 – fix docstring line length

	* gio/gio.defs:
	Fix docstring line lengths so they don't wrap across lines in an 80
	column terminal.

2008-08-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	Add GFile.query_default_handler which was missing from the defs.

2008-08-10  Jonathan Matthew  <jonathan@d14n.org>

	Bug 547067 – add File.replace_contents, replace_contents_async,
	replace_contents_finish.

	* gio/gfile.override:
	* gio/gio.defs:
	* tests/test_gio.py:
	Add overrides, docs, and tests for File.replace_contents,
	replace_contents_async, and replace_contents_finish.

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	* tests/test_gicon.py (TestThemedIcon.test_constructor): Fix to
	not use `use_default_fallbacks' property (it's new).

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546135 – GIcon and implementations improvements

	* gio/gio.defs (g_file_icon_new): Change from method of gio.File
	to constructor of gio.FileIcon.

	* tests/test_gicon.py (TestIcon.test_eq, Test_Eq.test_hash)
	(TestLoadableIcon.setUp): Adapt accordingly.
	(TestFileIcon): New test case.

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546591 – File.copy progress_callback does not work

	* gio/gfile.override (file_progress_callback_marshal): Use
	PyObject_CallFunction() instead of PyEval_CallFunction().  Use "K"
	instead of "k" (the latter is not correct for 32-bit platforms).
	Don't free 'notify' here.
	(_wrap_g_file_copy): Free 'notify'.
	(_wrap_g_file_move): Likewise.

	* gio/gio.override (pygio_free_notify): New function.
	(async_result_callback_marshal): Use it.

	* tests/test_gio.py (TestFile.test_copy_progress.progress): New
	test.

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546135 – GIcon and implementations improvements

	* gio/gio.defs (gio.LoadableIcon.load)
	(gio.LoadableIcon.load_async, gio.LoadableIcon.load_finish):
	Document.

	* gio/Makefile.am: