@@ -1,3 +1,12 @@
+2008-08-10  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	Bug 547104 – improve runtime type wrapper creation
+
+	* gobject/pygobject.c (pygobject_new_with_interfaces): Use new
+	pygobject_find_slot_for() for `tp_richcompare', `tp_compare`,
+	`tp_hash', `tp_iter', `tp_repr', `tp_str' and `tp_print'.
+	(pygobject_find_slot_for): New static function.
+
 2008-08-10  Jonathan Matthew  <jonathan@d14n.org>
 
 	Bug 547134 – fix docstring line length
